--- a/package.json
+++ b/package.json
@@ -1,20 +1,39 @@
 {
-  "name": "honma-backend",
+  "name": "brae-api",
   "version": "1.0.0",
-  "description": "backend intermediario honma - vtex",
-  "main": "index.js",
-  "repository": "https://MarcosHMaia@bitbucket.org/osfeladaeplus/honma-backend.git",
-  "author": "marcoshenriquemaia <henriquemarcosmaia@gmail.com>",
+  "main": "src/server.ts",
+  "author": "Bruno Rodrigues <bruno@agenciaeplus.com.br>",
   "license": "MIT",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon"
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+    "start": "node dist/server.js"
   },
-  "private": true,
+  "devDependencies": {
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/node": "^7.14.2",
+    "@babel/preset-env": "^7.14.4",
+    "@babel/preset-typescript": "^7.13.0",
+    "@types/cors": "^2.8.10",
+    "@types/express": "^4.17.12",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "prettier": "^2.3.0",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.3.2"
+  },
   "dependencies": {
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.4"
+    "express-async-errors": "^3.1.1",
+    "lowdb": "github:dankreiger/lowdb#chore/esm-cjs-hybrid-WITH-LIB"
   }
 }
